namespace Ex03;

public class ElectricalEngine : Engine
{
    public ElectricalEngine(float i_BatteryCapacity):base(i_BatteryCapacity)
    {
    }
    
    // public void Recharge(float i_NewCharge)
    // {
    //     CurrentEnergyLevel = i_NewCharge;
    // }
}