@startuml
class Engine{
    protected readonly float m_EnergyCapacity
    protected float? m_CurrentEnergyLevel
    -public Engine(float i_EnergyCapacity)
    -public float? CurrentEnergyLevel()
    -public float EnergyCapacity()
}
class ElectricalEngine
{
    public ElectricalEngine(float i_BatteryCapacity):base(i_BatteryCapacity)
}

class FuelEngine{ 
        private eFuelType? m_FuelType
        public FuelEngine(float i_TankCapacity, eFuelType i_FuelType)
        -public eFuelType? FuelType()
}

Engine <|-- ElectricalEngine
Engine <|-- FuelEngine

@enduml